# CRYPTOGRAM

./: .gitignore  .gitignore-local  .gitmodules  .tsm_cryptogram_env.sh  AGENTS.md  ANDROID_SIGNAL_PORT_STATUS.md  AUDIT_GAPS.md  BUILD_GUIDE.md  BUILD_HOWTO.md  BUILD_IMPROVEMENTS_README.md  BUILD_INSTRUCTIONS.md  BUILD_QUICK_REFERENCE.md  BUILD_STATUS.md  BUILD_SYSTEM.md  CHANGELOG.md  CMakeLists.txt  COMMITTING.md  CRYPTOGRAM_SETTINGS_UI_MOCKUP.md  DEPLOYMENT_STRATEGIES.md  DESKTOP_IMPLEMENTATION.md  DOCUMENTATION.md  DUAL_PROJECT_SETUP.md  FINAL_STATUS.md  GITHUB_ACTIONS_BUILD.md  GPU_MINING_SUPPORT.md  HUMANITARIAN_VERIFICATION.md  LEGAL  LICENSE  LOCAL_CHANGES.md  MESSAGE_FLOW_COMPLETE.md  MONERO_MINING_INTEGRATION.md  PKI_TRUST_MODEL.md  PR_DESCRIPTION.md  PR_SUMMARY.md  README.md  README_BUILD.md  SECURITY_STANDARDS.md  SETUP_GUIDE.md  SETUP_STATUS.md  SUBMODULE_FIX.md  (+29 more)
.github/workflows/: android-apk.yml  build-android.yml  desktop-native.yml  docker-build.yml  docker.yml  linux-appimage.yml  linux-deb.yml  mac-win.yml  release.yml
API Reference_files/: api-reference
TMessagesProj/jni/: CMakeLists.txt
Telegram/: CMakeLists.txt
Telegram/Resources/: night.tdesktop-theme
Telegram/SourceFiles/: apiwrap.cpp  apiwrap.h  config.h  main.cpp  mainwidget.cpp  mainwidget.h  mainwindow.cpp  mainwindow.h  settings.h
Telegram/cmake/: generate_appstream_changelog.cmake  lib_tgcalls.cmake  qrhi_shaders.cmake  telegram_options.cmake
debian/: changelog  control  copyright  cryptogram-desktop.desktop  cryptogram-desktop.install  rules
docker/: build.sh  docker-compose.yml
docker/ios/: Dockerfile  build-ios.sh
docker/linux/: Dockerfile  build-linux.sh
docker/windows/: Dockerfile  build-windows.sh  mingw-w64-toolchain.cmake
docs/: BUILD_FROM_SOURCE.md  README.md  building-linux.md  building-win.md
docs/archive/: ADDITIONAL_FEATURES_AVAILABLE.pre-dev-std-20251110T235607Z.md  AVAILABLE_SPYGRAM_FEATURES.md  AVAILABLE_SPYGRAM_FEATURES.pre-dev-std-20251110T235607Z.md  CRYPTOGRAM_ANDROID_COMPLETE.pre-dev-std-20251110T235607Z.md  CRYPTOGRAM_ANDROID_PORT.pre-dev-std-20251110T235607Z.md  CRYPTOGRAM_SETTINGS_UI_MOCKUP.md  DOCKER_BUILD.md  DOUBLE_RATCHET_PORT.md  DOUBLE_RATCHET_PORT.pre-dev-std-20251110T235607Z.md  FIVE_FEATURES_PORT.pre-dev-std-20251110T235607Z.md  GITHUB_ACTIONS_BUILD.md  PULL_REQUEST.md  README.md  (+10 more)
extracted_assets/: badge_mod.py  recolor.py
patches/: README.md
snap/: snapcraft.yaml
tests/: check_syntax.sh
tests/unit/: CMakeLists.txt  test_cryptogram_features.cpp  test_double_ratchet.cpp  test_e2e_android_jni.cpp  test_e2e_build_verification.cpp  test_e2e_counterintelligence.cpp  test_e2e_crypto_primitives.cpp  test_e2e_mls_protocol.cpp  test_e2e_signal_protocol.cpp  test_mls_protocol.cpp
theme_unzipped/: colors.tdesktop-theme
(+661 files in other folders)
